[tool.poetry]
name = "nonebot_plugin_randomtkk"
version = "0.1.5.post1"
description = "Find Tan Kuku!"
authors = ["KafCoppelia <k740677208@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/MinatoAquaCrews/nonebot_plugin_randomtkk"
keywords = ["nonebot2", "nonebot-plugin", "Random Tankuku", "MinatoAquaCrews"]
packages = [{include = "nonebot_plugin_randomtkk"}]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0b3"
nonebot-adapter-onebot = "^2.1.1"
pillow = "^9.0.1"
aiofiles = "^0.8.0"
httpx = "^0.23.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tencentyun"
url = "https://mirrors.tencent.com/pypi/simple"
default = false
secondary = false
